--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Ph.D. student at Duke ECE. Interests: Machine learning, Computer Vi
 github_username: jph00
 
 # Email and twitter are optional:
-email:yx246{at}duke{dot}edu
+email:
 twitter_username:
 
 # Set this to true to get LaTeX math equation support
