--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Kevin. Y. "Harbinger" Xiu's Personal Blog
-description: Ph.D. student at Duke ECE. Interests: Machine learning, Computer Vision, Running, Marvel Comics. ;-)
+description: Ph.D. student at Duke ECE. Interests including Machine learning, Computer Vision, Running, Marvel Comics. ;-)
 github_username: jph00
 
 # Email and twitter are optional:
